--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -22,6 +22,6 @@ jobs:
           with:
             host: 13.233.104.206
             username: ec2-user
-            key: ${{ secrets.KEY }}
+            key: ${{ secrets.SSH_KEY }}
             port: 22
             script: whoami
