--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -62,4 +62,4 @@ jobs:
             username: ec2-user
             key: ${{ secrets.SSH_KEY }}
             port: 22
-            script: whoami
+            script: hostname
