--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -19,6 +19,27 @@ jobs:
             php-version: '8.3'
         - uses: actions/checkout@v4
 
+        - name: Copy .env
+          run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+        - name: Install Dependencies
+          run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+        - name: Generate key
+          run: php artisan key:generate
+
+        - name: Execute db migrate command
+          run: php artisan migrate --no-interaction -vvv
+          
+        - name: Create deployment artifact
+          run: tar -czf app.tar.gz --exclude=*.git --exclude=tests *
+        
+        - name: Store artifact for distribution
+          uses: actions/upload-artifact@v4
+          with:
+            name: app-build
+            path: ${{ github.sha }}.tar.gz
+
         - name: Configure AWS CLI
           uses: aws-actions/configure-aws-credentials@v1
           with:
@@ -55,6 +76,20 @@ jobs:
         matrix:
             ip: ${{ fromJson(needs.get_ec2_ip.outputs.ec2_ips) }}
     steps:
+        - uses: actions/download-artifact@v4
+          with:
+            name: app-build
+
+        - name: Upload
+          uses: appleboy/scp-action@master
+          with:
+            host: ${{ matrix.ip }}
+            username: ec2-user
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            source: ${{ github.sha }}.tar.gz
+            target: /var/www/html/artifacts
+
         - name: executing remote ssh commands using ssh key
           uses: appleboy/ssh-action@v1.0.3
           with:
@@ -63,3 +98,22 @@ jobs:
             key: ${{ secrets.SSH_KEY }}
             port: 22
             script: hostname
+
+        - name: Extract archive and create directories
+          uses: appleboy/ssh-action@master
+          env:
+           GITHUB_SHA: ${{ github.sha }}
+          with:
+            host: ${{ matrix.ip }}
+            username: ec2-user
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            envs: GITHUB_SHA
+            script: |
+                mkdir -p "/var/www/html/releases/${GITHUB_SHA}"
+                tar xzf /var/www/html/artifacts/${GITHUB_SHA}.tar.gz -C "/var/www/html/releases/${GITHUB_SHA}"
+                rm -rf /var/www/html/releases/${GITHUB_SHA}/storage
+        
+                mkdir -p /var/www/html/storage/{app,public,framework,logs}
+                mkdir -p /var/www/html/storage/framework/{cache,sessions,testing,views}
+                chmod -R 0777 /var/www/html/storage
