--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -84,7 +84,7 @@ jobs:
             name: app-build
 
         - name: Upload
-          uses: appleboy/scp-action@master
+          uses: appleboy/scp-action@209e8c05e0492f6ed6fe8a22dfcaefb083c4cf35
           with:
             host: ${{ matrix.ip }}
             username: ec2-user
