--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -84,7 +84,7 @@ jobs:
             name: app-build
 
         - name: Upload
-          uses: appleboy/scp-action@0.1.3
+          uses: appleboy/scp-action@v0.1.3
           with:
             host: ${{ matrix.ip }}
             username: ec2-user
