--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -120,3 +120,38 @@ jobs:
                 mkdir -p /var/www/html/storage/{app,public,framework,logs}
                 mkdir -p /var/www/html/storage/framework/{cache,sessions,testing,views}
                 chmod -R 0777 /var/www/html/storage
+
+        - name: Activate release
+          uses: appleboy/ssh-action@master
+          env:
+            GITHUB_SHA: ${{ github.sha }}
+            RELEASE_PATH: /var/www/html/releases/${{ github.sha }}
+            ACTIVE_RELEASE_PATH: /var/www/html/current
+            STORAGE_PATH: /var/www/html/storage
+            BASE_PATH: /var/www/html
+          with:
+            host: ${{ matrix.ip }}
+            username: ec2-user
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_PATH
+            script: |
+                ln -s -f $STORAGE_PATH $RELEASE_PATH
+                ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
+                service php8.0-fpm reload
+                service nginx reload
+
+        - name: Run after hooks
+          uses: appleboy/ssh-action@master
+          env:
+            RELEASES_PATH: /var/www/html/releases
+            ARTIFACTS_PATH: /var/www/html/artifacts
+          with:
+              host: ${{ matrix.ip }}
+              username: ec2-user
+              key: ${{ secrets.SSH_KEY }}
+              port: 22
+              envs: RELEASES_PATH, ARTIFACTS_PATH
+              script: |
+                cd $RELEASES_PATH && ls -t -1 | tail -n +3 | xargs rm -rf
+                cd $ARTIFACTS_PATH && ls -t -1 | tail -n +3 | xargs rm -rf
