--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -136,10 +136,9 @@ jobs:
             port: 22
             envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_PATH
             script: |
+                printf "%s" "$LARAVEL_ENV" > "${BASE_PATH}/.env"
                 ln -s -f $STORAGE_PATH $RELEASE_PATH
                 ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
-                service php8.0-fpm reload
-                service nginx reload
 
         - name: Run after hooks
           uses: appleboy/ssh-action@master
