--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -135,6 +135,7 @@ jobs:
             envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,LARAVEL_ENV
             script: |
                 printf "%s" "$LARAVEL_ENV" > "${BASE_PATH}/.env"
+                ln -s -f ${BASE_PATH}/.env $RELEASE_PATH
                 ln -s -f $STORAGE_PATH $RELEASE_PATH
                 ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
                 sudo chmod -R 0777 /var/www/html/current 
